src/test/ui/impl-trait/issues/issue-70971.stderr
error[E0562]: `impl Trait` not allowed outside of function and method return types
  --> $DIR/issue-70971.rs:2:14
   |
LL |     let x : (impl Copy,) = (true,);
   |              ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0562`.
