src/test/ui/impl-trait/issues/issue-70971.rs
fn main() {
    let x : (impl Copy,) = (true,);
    //~^ `impl Trait` not allowed outside of function and method return types
}
